k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-python-rest
  namespace: apps
  labels:
    app: sample-python-rest

spec:
  type: ClusterIP
  selector:
    app: sample-python-rest
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8081
